--- a/xmodule/static/css-builtin-blocks/HtmlBlockDisplay.css
+++ b/xmodule/static/css-builtin-blocks/HtmlBlockDisplay.css
@@ -24,7 +24,7 @@
     color: #646464;
     font: normal 1.2em/1.2em var(--font-family-sans-serif);
     letter-spacing: 1px;
-    margin-bottom: calc((var(--baseline) * 0.75));
+    margin-bottom: calc((var(--baseline, 20px) * 0.75));
     -webkit-font-smoothing: antialiased;
 }
 
@@ -44,7 +44,7 @@
 .xmodule_display.xmodule_StaticTabBlock h4,
 .xmodule_display.xmodule_StaticTabBlock h5,
 .xmodule_display.xmodule_StaticTabBlock h6 {
-    margin: 0 0 calc((var(--baseline) / 2));
+    margin: 0 0 calc((var(--baseline, 20px) / 2));
     font-weight: 600;
 }
 
@@ -142,14 +142,14 @@
 .xmodule_display.xmodule_StaticTabBlock p+p,
 .xmodule_display.xmodule_StaticTabBlock ul+p,
 .xmodule_display.xmodule_StaticTabBlock ol+p {
-    margin-top: var(--baseline);
+    margin-top: var(--baseline, 20px);
 }
 
 .xmodule_display.xmodule_AboutBlock blockquote,
 .xmodule_display.xmodule_CourseInfoBlock blockquote,
 .xmodule_display.xmodule_HtmlBlock blockquote,
 .xmodule_display.xmodule_StaticTabBlock blockquote {
-    margin: 1em calc((var(--baseline) * 2));
+    margin: 1em calc((var(--baseline, 20px) * 2));
 }
 
 .xmodule_display.xmodule_AboutBlock ol,
@@ -248,7 +248,7 @@
 .xmodule_display.xmodule_HtmlBlock table,
 .xmodule_display.xmodule_StaticTabBlock table {
     width: 100%;
-    margin: var(--baseline) 0;
+    margin: var(--baseline, 20px) 0;
     border-collapse: collapse;
     font-size: 16px;
 }
@@ -261,8 +261,8 @@
 .xmodule_display.xmodule_HtmlBlock table th,
 .xmodule_display.xmodule_StaticTabBlock table td,
 .xmodule_display.xmodule_StaticTabBlock table th {
-    margin: var(--baseline) 0;
-    padding: calc((var(--baseline) / 2));
+    margin: var(--baseline, 20px) 0;
+    padding: calc((var(--baseline, 20px) / 2));
     border: 1px solid var(--gray-l3);
     font-size: 14px;
 }
@@ -314,7 +314,7 @@
 .xmodule_display.xmodule_StaticTabBlock .wrapper-modal-image .modal-ui-icon {
     position: absolute;
     display: block;
-    padding: calc((var(--baseline) / 4)) 7px;
+    padding: calc((var(--baseline, 20px) / 4)) 7px;
     border-radius: 5px;
     opacity: 0.9;
     background: var(--white);
@@ -446,14 +446,14 @@
 .xmodule_display.xmodule_CourseInfoBlock .wrapper-modal-image .image-modal .image-content .image-controls .image-control .modal-ui-icon.action-zoom-in,
 .xmodule_display.xmodule_HtmlBlock .wrapper-modal-image .image-modal .image-content .image-controls .image-control .modal-ui-icon.action-zoom-in,
 .xmodule_display.xmodule_StaticTabBlock .wrapper-modal-image .image-modal .image-content .image-controls .image-control .modal-ui-icon.action-zoom-in {
-    margin-right: calc((var(--baseline) / 4));
+    margin-right: calc((var(--baseline, 20px) / 4));
 }
 
 .xmodule_display.xmodule_AboutBlock .wrapper-modal-image .image-modal .image-content .image-controls .image-control .modal-ui-icon.action-zoom-out,
 .xmodule_display.xmodule_CourseInfoBlock .wrapper-modal-image .image-modal .image-content .image-controls .image-control .modal-ui-icon.action-zoom-out,
 .xmodule_display.xmodule_HtmlBlock .wrapper-modal-image .image-modal .image-content .image-controls .image-control .modal-ui-icon.action-zoom-out,
 .xmodule_display.xmodule_StaticTabBlock .wrapper-modal-image .image-modal .image-content .image-controls .image-control .modal-ui-icon.action-zoom-out {
-    margin-left: calc((var(--baseline) / 4));
+    margin-left: calc((var(--baseline, 20px) / 4));
 }
 
 .xmodule_display.xmodule_AboutBlock .wrapper-modal-image .image-modal .image-content .image-controls .image-control .modal-ui-icon.is-disabled,
