--- a/xmodule/static/css-builtin-blocks/LTIBlockDisplay.css
+++ b/xmodule/static/css-builtin-blocks/LTIBlockDisplay.css
@@ -7,7 +7,7 @@
 
 .xmodule_display.xmodule_LTIBlock div.problem-progress {
     display: inline-block;
-    padding-left: calc((var(--baseline) / 4));
+    padding-left: calc((var(--baseline, 20px) / 4));
     color: #666;
     font-weight: 100;
     font-size: 1em;
@@ -20,7 +20,7 @@
 .xmodule_display.xmodule_LTIBlock div.lti .wrapper-lti-link {
     font-size: 14px;
     background-color: var(--sidebar-color);
-    padding: var(--baseline);
+    padding: var(--baseline, 20px);
 }
 
 .xmodule_display.xmodule_LTIBlock div.lti .wrapper-lti-link .lti-link {
@@ -51,6 +51,6 @@
 }
 
 .xmodule_display.xmodule_LTIBlock div.lti div.problem-feedback {
-    margin-top: calc((var(--baseline) / 4));
-    margin-bottom: calc((var(--baseline) / 4));
+    margin-top: calc((var(--baseline, 20px) / 4));
+    margin-bottom: calc((var(--baseline, 20px) / 4));
 }
