--- a/xmodule/static/css-builtin-blocks/ProblemBlockEditor.css
+++ b/xmodule/static/css-builtin-blocks/ProblemBlockEditor.css
@@ -49,7 +49,7 @@
     background-image: -webkit-linear-gradient(top, #d4dee8, #c9d5e2);
     background-image: linear-gradient(to bottom, #d4dee8, #c9d5e2);
     position: relative;
-    padding: calc(var(--baseline) / 4);
+    padding: calc(var(--baseline, 20px) / 4);
     border-bottom-color: #a5aaaf;
 }
 
@@ -62,7 +62,7 @@
 .xmodule_edit.xmodule_ProblemBlock .editor .editor-bar button {
     display: inline-block;
     float: left;
-    padding: 3px calc(var(--baseline) / 2) 5px;
+    padding: 3px calc(var(--baseline, 20px) / 2) 5px;
     margin-left: 7px;
     border: 0;
     border-radius: 2px;
@@ -88,7 +88,7 @@
 
 .xmodule_edit.xmodule_ProblemBlock .editor .editor-tabs li {
     float: left;
-    margin-right: calc(var(--baseline) / 4);
+    margin-right: calc(var(--baseline, 20px) / 4);
 }
 
 .xmodule_edit.xmodule_ProblemBlock .editor .editor-tabs li:last-child {
@@ -194,7 +194,7 @@
 }
 
 .xmodule_edit.xmodule_ProblemBlock .simple-editor-cheatsheet .col.sample .icon {
-    height: calc(var(--baseline) * 1.5);
+    height: calc(var(--baseline, 20px) * 1.5);
 }
 
 .xmodule_edit.xmodule_ProblemBlock .simple-editor-cheatsheet pre {
