--- a/xmodule/static/css-builtin-blocks/VideoBlockDisplay.css
+++ b/xmodule/static/css-builtin-blocks/VideoBlockDisplay.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700");
 
 .xmodule_display.xmodule_VideoBlock {
-    margin-bottom: calc((var(--baseline) * 1.5));
+    margin-bottom: calc((var(--baseline, 20px) * 1.5));
 }
 
 .xmodule_display.xmodule_VideoBlock .is-hidden,
@@ -81,8 +81,8 @@
 .xmodule_display.xmodule_VideoBlock .video .wrapper-video-bottom-section .branding,
 .xmodule_display.xmodule_VideoBlock .video .wrapper-video-bottom-section .wrapper-transcript-feedback {
     flex: 1;
-    margin-top: var(--baseline);
-    padding-right: var(--baseline);
+    margin-top: var(--baseline, 20px);
+    padding-right: var(--baseline, 20px);
     vertical-align: top;
 }
 
@@ -131,8 +131,8 @@
 .xmodule_display.xmodule_VideoBlock .video .wrapper-downloads .branding .brand-logo {
     display: inline-block;
     max-width: 100%;
-    max-height: calc((var(--baseline) * 2));
-    padding: calc((var(--baseline) / 4)) 0;
+    max-height: calc((var(--baseline, 20px) * 2));
+    padding: calc((var(--baseline, 20px) / 4)) 0;
     vertical-align: middle;
 }
 
@@ -157,8 +157,8 @@
 
 .xmodule_display.xmodule_VideoBlock .video .google-disclaimer {
     display: none;
-    margin-top: var(--baseline);
-    padding-right: var(--baseline);
+    margin-top: var(--baseline, 20px);
+    padding-right: var(--baseline, 20px);
     vertical-align: top;
 }
 
@@ -242,9 +242,9 @@
 }
 
 .xmodule_display.xmodule_VideoBlock .video .video-wrapper .closed-captions.is-visible {
-    max-height: calc((var(--baseline) * 3));
-    border-radius: calc((var(--baseline) / 5));
-    padding: 8px calc((var(--baseline) / 2)) 8px calc((var(--baseline) * 1.5));
+    max-height: calc((var(--baseline, 20px) * 3));
+    border-radius: calc((var(--baseline, 20px) / 5));
+    padding: 8px calc((var(--baseline, 20px) / 2)) 8px calc((var(--baseline, 20px) * 1.5));
     background: rgba(0, 0, 0, 0.75);
     color: var(--yellow);
 }
@@ -253,7 +253,7 @@
     position: absolute;
     display: inline-block;
     top: 50%;
-    left: var(--baseline);
+    left: var(--baseline, 20px);
     margin-top: -0.6em;
     font-family: 'FontAwesome';
     content: "\f142";
@@ -287,7 +287,7 @@
 
 .xmodule_display.xmodule_VideoBlock .video .video-wrapper .video-player .video-error,
 .xmodule_display.xmodule_VideoBlock .video .video-wrapper .video-player .video-hls-error {
-    padding: calc((var(--baseline) / 5));
+    padding: calc((var(--baseline, 20px) / 5));
     background: black;
     color: white !important;
 }
@@ -336,7 +336,7 @@
     margin: 0;
     border: 0;
     border-radius: 0;
-    padding: calc((var(--baseline) / 2)) calc((var(--baseline) / 1.5));
+    padding: calc((var(--baseline, 20px) / 2)) calc((var(--baseline, 20px) / 1.5));
     background: #282c2e;
     box-shadow: none;
     text-shadow: none;
@@ -371,7 +371,7 @@
     left: 0;
     right: 0;
     z-index: 1;
-    height: calc((var(--baseline) / 4));
+    height: calc((var(--baseline, 20px) / 4));
     margin-left: 0;
     border: 1px solid #4f595d;
     border-radius: 0;
@@ -402,11 +402,11 @@
     transition: all 0.7s ease-in-out 0s;
     box-sizing: border-box;
     top: -1px;
-    height: calc((var(--baseline) / 4));
-    width: calc((var(--baseline) / 4));
-    margin-left: calc(-1 * (var(--baseline) / 8));
+    height: calc((var(--baseline, 20px) / 4));
+    width: calc((var(--baseline, 20px) / 4));
+    margin-left: calc(-1 * (var(--baseline, 20px) / 8));
     border: 1px solid #cb598d;
-    border-radius: calc((var(--baseline) / 5));
+    border-radius: calc((var(--baseline, 20px) / 5));
     padding: 0;
     background: #cb598d;
     box-shadow: none;
@@ -483,7 +483,7 @@
     transition: none;
     position: absolute;
     display: none;
-    bottom: calc((var(--baseline) * 2));
+    bottom: calc((var(--baseline, 20px) * 2));
     right: 0;
     width: 120px;
     margin: 0;
@@ -525,7 +525,7 @@
 
 .xmodule_display.xmodule_VideoBlock .video .video-wrapper .video-controls .secondary-controls .menu-container .menu li.is-active .speed-option,
 .xmodule_display.xmodule_VideoBlock .video .video-wrapper .video-controls .secondary-controls .menu-container .menu li.is-active .control-lang {
-    border-left: calc(var(--baseline) / 10) solid #0ea6ec;
+    border-left: calc(var(--baseline, 20px) / 10) solid #0ea6ec;
     font-weight: var(--font-bold);
     color: #0ea6ec;
 }
@@ -545,7 +545,7 @@
 }
 
 .xmodule_display.xmodule_VideoBlock .video .video-wrapper .video-controls .secondary-controls .speeds .speed-button .label {
-    padding: 0 calc((var(--baseline) / 3)) 0 0;
+    padding: 0 calc((var(--baseline, 20px) / 3)) 0 0;
     font-family: var(--font-family-sans-serif);
     color: #e7ecee;
 }
@@ -570,8 +570,8 @@
 }
 
 .xmodule_display.xmodule_VideoBlock .video .video-wrapper .video-controls .secondary-controls .lang .language-menu {
-    width: var(--baseline);
-    padding: calc((var(--baseline) / 2)) 0;
+    width: var(--baseline, 20px);
+    padding: calc((var(--baseline, 20px) / 2)) 0;
 }
 
 .xmodule_display.xmodule_VideoBlock .video .video-wrapper .video-controls .secondary-controls .lang.is-opened .control .icon {
@@ -596,7 +596,7 @@
     transition: none;
     display: none;
     position: absolute;
-    bottom: calc((var(--baseline) * 2));
+    bottom: calc((var(--baseline, 20px) * 2));
     right: 0;
     width: 41px;
     height: 120px;
@@ -605,7 +605,7 @@
 
 .xmodule_display.xmodule_VideoBlock .video .video-wrapper .video-controls .secondary-controls .volume .volume-slider-container .volume-slider {
     height: 100px;
-    width: calc((var(--baseline) / 4));
+    width: calc((var(--baseline, 20px) / 4));
     margin: 14px auto;
     box-sizing: border-box;
     border: 1px solid #4f595d;
@@ -619,7 +619,7 @@
     height: 13px;
     width: 13px;
     border: 1px solid #cb598d;
-    border-radius: calc((var(--baseline) / 5));
+    border-radius: calc((var(--baseline, 20px) / 5));
     padding: 0;
     background: #cb598d;
     box-shadow: none;
@@ -661,12 +661,12 @@
 }
 
 .xmodule_display.xmodule_VideoBlock .video .video-wrapper:hover .video-controls .slider {
-    height: calc((var(--baseline) / 1.5));
+    height: calc((var(--baseline, 20px) / 1.5));
 }
 
 .xmodule_display.xmodule_VideoBlock .video .video-wrapper:hover .video-controls .slider .ui-slider-handle {
-    height: calc((var(--baseline) / 1.5));
-    width: calc((var(--baseline) / 1.5));
+    height: calc((var(--baseline, 20px) / 1.5));
+    width: calc((var(--baseline, 20px) / 1.5));
 }
 
 .xmodule_display.xmodule_VideoBlock .video.video-fullscreen .closed-captions {
@@ -768,7 +768,7 @@
     bottom: 0;
     top: 0;
     width: 275px;
-    padding: 0 var(--baseline);
+    padding: 0 var(--baseline, 20px);
     display: none;
 }
 
@@ -880,9 +880,9 @@
 }
 
 .xmodule_display.xmodule_VideoBlock .video .video-pre-roll .btn-play.btn-pre-roll {
-    padding: var(--baseline);
+    padding: var(--baseline, 20px);
     border: none;
-    border-radius: var(--baseline);
+    border-radius: var(--baseline, 20px);
     background: var(--black-t2);
     box-shadow: none;
 }
@@ -892,8 +892,8 @@
 }
 
 .xmodule_display.xmodule_VideoBlock .video .video-pre-roll .btn-play.btn-pre-roll img {
-    height: calc((var(--baseline) * 4));
-    width: calc((var(--baseline) * 4));
+    height: calc((var(--baseline, 20px) * 4));
+    width: calc((var(--baseline, 20px) * 4));
 }
 
 .xmodule_display.xmodule_VideoBlock .video .video-pre-roll .btn-play.btn-pre-roll:hover,
@@ -1013,7 +1013,7 @@
     display: block;
     border-radius: 0 3px 3px 0;
     background-color: var(--very-light-text);
-    padding: calc((var(--baseline) * 0.75)) calc((var(--baseline) * 1.25)) calc((var(--baseline) * 0.75)) calc((var(--baseline) * 0.75));
+    padding: calc((var(--baseline, 20px) * 0.75)) calc((var(--baseline, 20px) * 1.25)) calc((var(--baseline, 20px) * 0.75)) calc((var(--baseline, 20px) * 0.75));
     color: var(--gray-l2);
     min-width: 1.5em;
     line-height: 14px;
@@ -1025,7 +1025,7 @@
 .xmodule_display.xmodule_VideoBlock .video-tracks .a11y-menu-container>a::after {
     content: "\f0d7";
     position: absolute;
-    right: calc((var(--baseline) * 0.5));
+    right: calc((var(--baseline, 20px) * 0.5));
     top: 33%;
     color: var(--lighter-base-font-color);
 }
@@ -1073,7 +1073,7 @@
 .xmodule_display.xmodule_VideoBlock .submenu .menu-item,
 .xmodule_display.xmodule_VideoBlock .submenu .submenu-item {
     border-top: 1px solid var(--gray-l3);
-    padding: calc((var(--baseline) / 4)) calc((var(--baseline) / 2));
+    padding: calc((var(--baseline, 20px) / 4)) calc((var(--baseline, 20px) / 2));
     outline: none;
 }
 
@@ -1109,7 +1109,7 @@
 .xmodule_display.xmodule_VideoBlock .contextmenu .submenu-item,
 .xmodule_display.xmodule_VideoBlock .submenu .submenu-item {
     position: relative;
-    padding: calc((var(--baseline) / 4)) var(--baseline) calc((var(--baseline) / 4)) calc((var(--baseline) / 2));
+    padding: calc((var(--baseline, 20px) / 4)) var(--baseline, 20px) calc((var(--baseline, 20px) / 4)) calc((var(--baseline, 20px) / 2));
 }
 
 .xmodule_display.xmodule_VideoBlock .contextmenu .submenu-item::after,
